fix(table): fix cell collapse

--- a/style.css
+++ b/style.css
@@ -191,6 +191,11 @@ td {
     font-size: 20px;
 }
 
+th {
+    width: 70px;
+    border: 2px;
+}
+
 .selector {
     display: flex;
     justify-content: space-around;
